from .service_method import ServiceMethod
from .operating_system import OperatingSystem

class ServiceMethodUtil:
    def __init__(self, method: ServiceMethod, operating_system: OperatingSystem, program_language: str):
        self.method = method
        self.operating_system = operating_system
        self.program_language = program_language

    def generateProtoFile(self, filePath: str) -> bool:
        # Implement generation logic
        return True

    def generateGrpcFile(self, proto2pbFilePath: str) -> bool:
        # Implement generation logic
        return True

    def generateLib(self, proto2pbFilePath: str) -> bool:
        # Implement generation logic
        return True

    def generateServiceImpl(self) -> bool:
        # Implement generation logic
        return True

    def generateStubImpl(self) -> bool:
        # Implement generation logic
        return True